# melfa_ros2_masterclass_2024

./: .gitignore  LICENSE  README.md
MELSOFT Project Files/: FX5UJ_hw.gx3  IQR_sim.gx3
MELSOFT Project Files/RV-5AS/: MELFA_WSP.rt3wsp  MELFA_WSP.xml  MELFA_WSP.xml.iqap  MELFA_WSP_Output.txt  MELFA_WSP_PaneLayout.xml
MELSOFT Project Files/RV-5AS/@IOSimulator@/: masterclass.xml
MELSOFT Project Files/RV-5AS/Layout/Layout/: LayoutInfo.xml
MELSOFT Project Files/RV-5AS/RC1/: MELFA_PRJ.xml
MELSOFT Project Files/RV-5AS/RC1/CoreSpace/: COMMON.PRM  RV-5AS-D#1.PRM  SRPRMCR8.PRM  systembase.MB6
MELSOFT Project Files/RV-5AS/RC1/CoreSpace Online/: systembase.MB6
MELSOFT Project Files/RV-5AS/RC1/Oscillograph/: Oscillograph.xml
MELSOFT Project Files/RV-5AS/RC1/Others/: TaskSlot1.pgm
MELSOFT Project Files/RV-5AS/RC1/Parameter/: Common.lst  RV-5AS-D.lst
MELSOFT Project Files/RV-5AS/RC1/Program/: ROSCOLCMPG.prg  ROSMXT.prg
MELSOFT Project Files/RV-5AS/RC1/RoboSim/: MxtLog.mxtl  PMAIScore.lst  RV-7FR-D#1.PRM  sysalgn.MB6  sysimac.MB6  sysorg.MB6  syssafe.MB6  systembase.MB6
doc/: melfa_masterclass.md  melsoft_setup.md
melfa_masterclass_msgs/: CMakeLists.txt  package.xml
melfa_masterclass_msgs/msg/: GripperCommand.msg  GripperState.msg  SafetyState.msg  SensorState.msg
melfa_rv5as_masterclass/: CMakeLists.txt  package.xml
melfa_rv5as_masterclass/config/: rv5as_params.yaml
melfa_rv5as_masterclass/launch/: pick_n_place.launch.py
melfa_rv5as_masterclass/src/: hmi_.cpp  pick_n_place_.cpp  plc_.cpp
