<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>melfa_rv5as_masterclass</name>
  <version>1.0.0</version>
  <description>ROS-I AP Annual Summit 2024 Masterclass</description>
  <maintainer email="Muyao.Liu@asia.meap.com">Liu Muyao</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_core</depend>
  <depend>melfa_msgs</depend>
  <depend>std_msgs</depend>
  <depend>melfa_masterclass_msgs</depend>



  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
